[gd_scene load_steps=33 format=3 uid="uid://c85qduc5wj1ay"]

[ext_resource type="Script" uid="uid://bchwvoaem3smx" path="res://Scripts/CHARACTERS/beaver_jr.gd" id="1_lwq6a"]
[ext_resource type="Texture2D" uid="uid://drmh5chfe88oj" path="res://Assets/Characters/BEAVER_JR_01-sheet.png" id="1_vn2jn"]
[ext_resource type="PackedScene" uid="uid://pej2qquyboig" path="res://Scenes/UI/damages_text.tscn" id="2_3ancc"]
[ext_resource type="Shader" uid="uid://ypa4o84aameq" path="res://Shaders/player_damaged.gdshader" id="2_u0opc"]
[ext_resource type="AnimationLibrary" uid="uid://caxgoonh61f41" path="res://Animations/beaverJR_animations.res" id="4_6wt5a"]
[ext_resource type="Script" uid="uid://ch7wuueovhdb3" path="res://Scripts/UI/health_bar.gd" id="6_3ancc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6wt5a"]
resource_local_to_scene = true
shader = ExtResource("2_u0opc")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lwq6a"]
atlas = ExtResource("1_vn2jn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_evtc8"]
atlas = ExtResource("1_vn2jn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0opc"]
atlas = ExtResource("1_vn2jn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wt5a"]
atlas = ExtResource("1_vn2jn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ancc"]
atlas = ExtResource("1_vn2jn")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_577xi"]
atlas = ExtResource("1_vn2jn")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_feon6"]
atlas = ExtResource("1_vn2jn")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p75ny"]
atlas = ExtResource("1_vn2jn")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_le75j"]
atlas = ExtResource("1_vn2jn")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkv2y"]
atlas = ExtResource("1_vn2jn")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v58vu"]
atlas = ExtResource("1_vn2jn")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30vhe"]
atlas = ExtResource("1_vn2jn")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwyvo"]
atlas = ExtResource("1_vn2jn")
region = Rect2(352, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4j7oa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwq6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evtc8")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0opc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wt5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ancc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_577xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feon6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p75ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le75j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkv2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v58vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30vhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwyvo")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3ancc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -89.99999
angle_max = 90.000015
direction = Vector3(10, 0, 0)
initial_velocity_min = -5.0
initial_velocity_max = 5.0
gravity = Vector3(0, 98, 0)
color = Color(0.3749055, 0.18646315, 0.080855675, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_evtc8"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vn2jn"]
radius = 7.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lwq6a"]
radius = 91.00549

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4txoc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_577xi"]
resource_local_to_scene = true
bg_color = Color(0, 0.46666667, 0.09803922, 1)

[sub_resource type="Animation" id="Animation_qay8w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.46666667, 0.09803922, 1)]
}

[sub_resource type="Animation" id="Animation_78m4n"]
resource_name = "decreasing"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0.46666667, 0.09803922, 1), Color(1, 0, 0, 1), Color(0, 0.46666667, 0.09803922, 1)]
}

[sub_resource type="Animation" id="Animation_m34ix"]
resource_name = "increasing"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0.46666667, 0.09803922, 1), Color(1.6364455e-06, 0.9329222, 0, 1), Color(0, 0.46666667, 0.09803922, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjrfg"]
_data = {
&"RESET": SubResource("Animation_qay8w"),
&"decreasing": SubResource("Animation_78m4n"),
&"increasing": SubResource("Animation_m34ix")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3ancc"]
radius = 13.0

[node name="BeaverJr" type="CharacterBody2D" groups=["junior"]]
z_index = 20
z_as_relative = false
collision_layer = 64
collision_mask = 8
script = ExtResource("1_lwq6a")
damages_text = ExtResource("2_3ancc")

[node name="Visuals" type="Node2D" parent="."]
z_as_relative = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
z_as_relative = false
material = SubResource("ShaderMaterial_6wt5a")
position = Vector2(0, -9.536743e-07)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_4j7oa")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.04802123
offset = Vector2(0, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
libraries = {
&"beaverJR_animations": ExtResource("4_6wt5a")
}

[node name="WoodVFX" type="GPUParticles2D" parent="Visuals"]
visible = false
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -18)
scale = Vector2(8.412005, 1)
amount = 40
lifetime = 0.35000000000000003
explosiveness = 0.5
randomness = 0.08
process_material = SubResource("ParticleProcessMaterial_3ancc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_evtc8")

[node name="Hitbox" type="Area2D" parent="." groups=["junior"]]
collision_layer = 64
collision_mask = 130

[node name="Hitshape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_vn2jn")
debug_color = Color(0.957027, 0, 0.54408205, 0.41960785)

[node name="Radar" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4096

[node name="DetectionRange" type="CollisionShape2D" parent="Radar"]
shape = SubResource("CircleShape2D_lwq6a")
debug_color = Color(0.6447966, 0.52247214, 0.03796881, 0.41960785)

[node name="FarmingTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
y_sort_enabled = true
offset_left = -11.0
offset_top = -30.0
offset_right = 11.0
offset_bottom = -26.0
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_4txoc")
theme_override_styles/fill = SubResource("StyleBoxFlat_577xi")
step = 1.0
value = 50.0
rounded = true
show_percentage = false
script = ExtResource("6_3ancc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HealthBar"]
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_wjrfg")
}

[node name="TakingDamages" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="MarkerDamages" type="Marker2D" parent="."]
position = Vector2(0, -33)

[node name="CollectZone" type="Area2D" parent="." groups=["junior"]]
collision_layer = 256
collision_mask = 2560

[node name="CollectZone" type="CollisionShape2D" parent="CollectZone"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_3ancc")
debug_color = Color(0.65457684, 0.5179122, 0, 0.41960785)

[node name="FarmSpot" type="Marker2D" parent="."]
position = Vector2(0, -15)

[connection signal="area_entered" from="Radar" to="." method="_on_radar_area_entered"]
[connection signal="area_exited" from="Radar" to="." method="_on_radar_area_exited"]
[connection signal="timeout" from="FarmingTimer" to="." method="_on_farming_timer_timeout"]
[connection signal="animation_finished" from="HealthBar/AnimationPlayer" to="HealthBar" method="_on_animation_finished"]
[connection signal="timeout" from="TakingDamages" to="." method="_on_taking_damages_timeout"]
[connection signal="area_entered" from="CollectZone" to="." method="_on_collect_zone_entered"]
